nav menu mobile added

--- a/index.html
+++ b/index.html
@@ -15,22 +15,36 @@
 
 <body>
     <header class="main-header">
-        <div class="nav">
-            <ul class="nav__menu">
-                <li class="nav__item logo"><a href="#">
-                        <img src="/assets/logo.png" alt="image logo">
-                    </a>
-                </li>
-                <li class="nav__item">خانه</li>
-                <li class="nav__item">فروشگاه</li>
-                <li class="nav__item">درباره ما</li>
-            </ul>
+        <div class="nav block">
+            <div class="nav__main">
+                <a class="logo" href="#">
+                    <img src="/assets/logo.png" alt="image logo">
+                </a>
+                
+                <ul class="nav__menu">
+                    </li>
+                    <li class="nav__item">خانه</li>
+                    <li class="nav__item">فروشگاه</li>
+                    <li class="nav__item">درباره ما</li>
+                </ul>
+            </div>
             <div class="nav__btn">
                 <div class="btn btn__dark">
                     <p>ورود به داشبورد</p>
                 </div>
                 <div class="btn btn__white">
                     <p>دانلود اپلیکیشن</p>
+                </div>
+            </div>
+
+            <div class="nav__menu-mobile">
+                <div class="btn btn__dark-mobile">
+                    <p>فروشگاه بانواز</p>
+                </div>
+                <div class="nav__toggler">
+                    <div class="bar bar-one"></div>
+                    <div class="bar bar-two"></div>
+                    <div class="bar bar-three"></div>
                 </div>
             </div>
 
