home-phone mobile added

--- a/index.html
+++ b/index.html
@@ -14,43 +14,20 @@
 </head>
 
 <body>
-    <header class="main-header">
-        <div class="nav block">
-            <div class="nav__main">
-                <a class="logo" href="#">
-                    <img src="/assets/logo.png" alt="image logo">
-                </a>
-                
-                <ul class="nav__menu">
-                    </li>
-                    <li class="nav__item">خانه</li>
-                    <li class="nav__item">فروشگاه</li>
-                    <li class="nav__item">درباره ما</li>
-                </ul>
-            </div>
-            <div class="nav__btn">
-                <div class="btn btn__dark">
-                    <p>ورود به داشبورد</p>
-                </div>
-                <div class="btn btn__white">
-                    <p>دانلود اپلیکیشن</p>
-                </div>
-            </div>
-
-            <div class="nav__menu-mobile">
-                <div class="btn btn__dark-mobile">
-                    <p>فروشگاه بانواز</p>
-                </div>
-                <div class="nav__toggler">
-                    <div class="bar bar-one"></div>
-                    <div class="bar bar-two"></div>
-                    <div class="bar bar-three"></div>
-                </div>
-            </div>
-
-        </div>
-    </header>
 
 </body>
+<section class="home-phone block">
+    <img src="/assets/home-phone.png" alt="">
+
+   <div class="home-phone__detail">
+    <h2>خیالت از خونه راحت!</h2>
+    <p>بانواز واژه‌ای کردی به معنای باخبر ساختن با صدای بلند است. درست مثل بانواز!
+        با سنسورهای بانواز از هیچ اتفاقی بی خبر نیستی!
+        چه خونه باشی چه نه.</p>
+    <div class="btn btn__home-phone">
+        <p class="btn__name">فروشگاه بانواز</p>
+    </div>
+   </div>
+</section>
 
 </html>
