--- a/btn.html
+++ b/btn.html
@@ -38,6 +38,10 @@
     <p>ورود به داشبورد</p>
 </div>
 
+<div class="btn btn__home-phone">
+    <p>ورود به داشبورد</p>
+</div>
+
 </body>
 
 </html>
