--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
 
 </body>
 <section class="home-phone block">
-    <img src="/assets/home-phone.png" alt="">
-
-   <div class="home-phone__detail">
-    <h2>خیالت از خونه راحت!</h2>
-    <p>بانواز واژه‌ای کردی به معنای باخبر ساختن با صدای بلند است. درست مثل بانواز!
-        با سنسورهای بانواز از هیچ اتفاقی بی خبر نیستی!
-        چه خونه باشی چه نه.</p>
-    <div class="btn btn__home-phone">
-        <p class="btn__name">فروشگاه بانواز</p>
+    <img src="/assets/Home.png" alt="home image">
+    <img src="/assets/Phone-right.png" class="phone-righe" alt="phone image">
+    <img src="/assets/Phone-left.png" class="phone-left" alt="phone image">
+    <div class="home-phone__detail">
+        <h1>خیالت از خونه راحت!</h1>
+        <p>بانواز واژه‌ای کردی به معنای باخبر ساختن با صدای بلند است. درست مثل بانواز!
+            با سنسورهای بانواز از هیچ اتفاقی بی خبر نیستی!
+            چه خونه باشی چه نه.</p>
+        <div class="btn btn__home-phone">
+            <p class="btn__name">فروشگاه بانواز</p>
+        </div>
     </div>
-   </div>
 </section>
 
 </html>
