content section tow and three

--- a/home-phone.html
+++ b/home-phone.html
@@ -1,4 +1,4 @@
-<section class="home-phone block">
+<section class="home-phone container block">
     <img src="/assets/Home.png" alt="home image">
     <img src="/assets/Phone-right.png" class="phone-righe" alt="phone image">
     <img src="/assets/Phone-left.png" class="phone-left" alt="phone image">
@@ -11,4 +11,34 @@
             <p class="btn__name">فروشگاه بانواز</p>
         </div>
     </div>
+</section>
+<section class="products container block">
+    <div class="product__item"><img src="/assets/doors.png" alt="">
+        <p>درب و پنجره</p>
+    </div>
+    <div class="product__item"><img src="/assets/plants.png" alt="">
+        <p>گل و گیاه</p>
+    </div>
+    <div class="product__item"><img src="/assets/digitals.png" alt="">
+        <p>وسایل برقی</p>
+    </div>
+    <div class="product__item"><img src="/assets/lights.png" alt="">
+        <p>روشنایی</p>
+    </div>
+    <div class="product__item"><img src="/assets/worms.png" alt="">
+        <p>گرمایشی</p>
+    </div>
+    <div class="product__item"><img src="/assets/animals.png" alt="">
+        <p>حیوانات</p>
+    </div>
+</section>
+<section class="central-device container block">
+
+    <img src="/assets/device.png" alt="">
+
+    <h2>مدیریت دستگاه مرکزی</h2>
+    <p>
+        بانواز برای مدیریت و کنترل سنسورهای خودش از یک دستگاه مرکزی استفاده میکنه که همه چیز تحت کنترل همین دستگاه
+        مرکزیه. دستگاه به کمک اینترنت به گوشی شما متصل مسشه و شما میتونین همه چیز رو تحت کنترل خوتون بگیرین.
+    </p>
 </section>
