--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <body>
 
 </body>
-<section class="products block">
-<div class="product__item"><img src="/assets/doors.png" alt=""></div>
-<div class="product__item"><img src="/assets/doors.png" alt=""></div>
-<div class="product__item"><img src="/assets/doors.png" alt=""></div>
-<div class="product__item"><img src="/assets/doors.png" alt=""></div>
-<div class="product__item"><img src="/assets/doors.png" alt=""></div>
-<div class="product__item"><img src="/assets/doors.png" alt=""></div>
+<section class="download">
+    <div class="download__brochure">
+    <img src="/assets/dl-brochure-.png" alt="">
+    </div>
+    <div class="download__app">
+    <img src="/assets/dl-app.png" alt="">
+    </div>
 </section>
 
 </html>
