--- a/home-phone.html
+++ b/home-phone.html
@@ -42,3 +42,26 @@
         مرکزیه. دستگاه به کمک اینترنت به گوشی شما متصل مسشه و شما میتونین همه چیز رو تحت کنترل خوتون بگیرین.
     </p>
 </section>
+<section class="download ">
+    <div class="download__brochure">
+        <img src="/assets/dl-brochure-.png" class="dl-brochure-mobile" alt="">
+        <img src="/assets/dl-brochure-desk.png" class="dl-brochure-desk" alt="">
+        <div class="brochure__detail">
+            <h2>دارای تنظیمات مخصوص کودکان!</h2>
+            <p>نگران تغییر تنظیمات بانواز توسط فرزند عزیزت نباش!</p>
+            <div class="btn btn__light">
+                <span>فروشگاه بانواز</span>
+            </div>
+        </div>
+    </div>
+    <div class="download__app">
+        <img src="/assets/dl-app.png" alt="">
+        <div class="app__detail">
+            <h2>مدیریت خانه روی گوشی!</h2>
+            <p>با دانلود اپلیکیشن بانواز میتونی تمامی سنسورها رو روی گوشیت مشاهده و کنترل کنی.</p>
+            <div class="btn btn__primary-color">
+                <span>فروشگاه بانواز</span>
+            </div>
+        </div>
+    </div>
+</section>
