--- a/index.html
+++ b/index.html
@@ -16,12 +16,71 @@
 <body>
 
 </body>
-<section class="download">
+<section class="home-phone container block">
+    <img src="/assets/Home.png" alt="home image">
+    <img src="/assets/Phone-right.png" class="phone-righe" alt="phone image">
+    <img src="/assets/Phone-left.png" class="phone-left" alt="phone image">
+    <div class="home-phone__detail">
+        <h1>خیالت از خونه راحت!</h1>
+        <p>بانواز واژه‌ای کردی به معنای باخبر ساختن با صدای بلند است. درست مثل بانواز!
+            با سنسورهای بانواز از هیچ اتفاقی بی خبر نیستی!
+            چه خونه باشی چه نه.</p>
+        <div class="btn btn__home-phone">
+            <p class="btn__name">فروشگاه بانواز</p>
+        </div>
+    </div>
+</section>
+<section class="products container block">
+    <div class="product__item"><img src="/assets/doors.png" alt="">
+        <p>درب و پنجره</p>
+    </div>
+    <div class="product__item"><img src="/assets/plants.png" alt="">
+        <p>گل و گیاه</p>
+    </div>
+    <div class="product__item"><img src="/assets/digitals.png" alt="">
+        <p>وسایل برقی</p>
+    </div>
+    <div class="product__item"><img src="/assets/lights.png" alt="">
+        <p>روشنایی</p>
+    </div>
+    <div class="product__item"><img src="/assets/worms.png" alt="">
+        <p>گرمایشی</p>
+    </div>
+    <div class="product__item"><img src="/assets/animals.png" alt="">
+        <p>حیوانات</p>
+    </div>
+</section>
+<section class="central-device container block">
+
+    <img src="/assets/device.png" alt="">
+
+    <h2>مدیریت دستگاه مرکزی</h2>
+    <p>
+        بانواز برای مدیریت و کنترل سنسورهای خودش از یک دستگاه مرکزی استفاده میکنه که همه چیز تحت کنترل همین دستگاه
+        مرکزیه. دستگاه به کمک اینترنت به گوشی شما متصل مسشه و شما میتونین همه چیز رو تحت کنترل خوتون بگیرین.
+    </p>
+</section>
+<section class="download ">
     <div class="download__brochure">
-    <img src="/assets/dl-brochure-.png" alt="">
+        <img src="/assets/dl-brochure-.png" class="dl-brochure-mobile" alt="">
+        <img src="/assets/dl-brochure-desk.png" class="dl-brochure-desk" alt="">
+        <div class="brochure__detail">
+            <h2>دارای تنظیمات مخصوص کودکان!</h2>
+            <p>نگران تغییر تنظیمات بانواز توسط فرزند عزیزت نباش!</p>
+            <div class="btn btn__light">
+                <span>فروشگاه بانواز</span>
+            </div>
+        </div>
     </div>
     <div class="download__app">
-    <img src="/assets/dl-app.png" alt="">
+        <img src="/assets/dl-app.png" alt="">
+        <div class="app__detail">
+            <h2>مدیریت خانه روی گوشی!</h2>
+            <p>با دانلود اپلیکیشن بانواز میتونی تمامی سنسورها رو روی گوشیت مشاهده و کنترل کنی.</p>
+            <div class="btn btn__primary-color">
+                <span>فروشگاه بانواز</span>
+            </div>
+        </div>
     </div>
 </section>
 
