--- a/header.html
+++ b/header.html
@@ -6,7 +6,6 @@
             </a>
 
             <ul class="nav__menu">
-                </li>
                 <li class="nav__item">خانه</li>
                 <li class="nav__item">فروشگاه</li>
                 <li class="nav__item">درباره ما</li>
@@ -20,7 +19,6 @@
                 <p>دانلود اپلیکیشن</p>
             </div>
         </div>
-
         <div class="nav__menu-mobile">
             <div class="btn btn__dark-mobile">
                 <p>فروشگاه بانواز</p>
@@ -31,6 +29,11 @@
                 <div class="bar bar-three"></div>
             </div>
         </div>
-
     </div>
+    <!-- <ul class="nav__menu ">
+        </li>
+        <li class="nav__item">خانه</li>
+        <li class="nav__item">فروشگاه</li>
+        <li class="nav__item">درباره ما</li>
+    </ul> -->
 </header>
