--- a/home-phone.html
+++ b/home-phone.html
@@ -1,7 +1,39 @@
+<header class="main-header">
+    <div class="nav block">
+        <div class="nav__main">
+            <a class="logo" href="#">
+                <img src="/assets/logo.png" alt="image logo">
+            </a>
+
+            <ul class="nav__menu">
+                <li class="nav__item">خانه</li>
+                <li class="nav__item">فروشگاه</li>
+                <li class="nav__item">درباره ما</li>
+            </ul>
+        </div>
+        <div class="nav__btn">
+            <div class="btn btn__dark">
+                <p>ورود به داشبورد</p>
+            </div>
+            <div class="btn btn__white">
+                <p>دانلود اپلیکیشن</p>
+            </div>
+        </div>
+        <div class="nav__menu-mobile">
+            <div class="btn btn__dark-mobile">
+                <p>فروشگاه بانواز</p>
+            </div>
+            <div class="nav__toggler">
+                <div class="bar bar-one"></div>
+                <div class="bar bar-two"></div>
+                <div class="bar bar-three"></div>
+            </div>
+        </div>
+    </div>
+</header>
 <section class="home-phone container block">
     <img src="/assets/Home.png" alt="home image">
-    <img src="/assets/Phone-right.png" class="phone-righe" alt="phone image">
-    <img src="/assets/Phone-left.png" class="phone-left" alt="phone image">
+    <img src="/assets/Phone-img.png" class="phone-img" alt="phone image">
     <div class="home-phone__detail">
         <h1>خیالت از خونه راحت!</h1>
         <p>بانواز واژه‌ای کردی به معنای باخبر ساختن با صدای بلند است. درست مثل بانواز!
