--- a/index.html
+++ b/index.html
@@ -15,105 +15,36 @@
 
 <body>
 
+
+
+
+    <section class="Capabilities container block">
+        <div class="capability"><img src="/assets/cover-animals.png" alt="">
+            <p>سنسورهایی برای حیوان های خانگی شما نصب میشن میتونن با هوش مصنوعی گرسنه بودن اون رو تشخیص بدن!</p>
+        </div>
+        <div class="capability"><img src="/assets/cover-plants.png" alt="">
+            <p>با محاصبه حرارت اطراف خاک گیاهان میشه فهمید کی باید دوباره به گیاه ها آب بدی!</p>
+        </div>
+        <div class="capability"><img src="/assets/cover-lights.png" alt="">
+            <p>میتونی مدت زمان روشن بودن دستگاه های الکتریکی رو کنترل کنی. یا حتی برای روشن بودن اونها از بانواز کمک
+                بگیری.</p>
+        </div>
+        <div class="capability"><img src="/assets/cover-doors.png" alt="">
+            <p>باز و بسته شدن درب ها و پنجره ها، تشخیص حضور انسان و کلی قابلیت دیگه در سنسورهای بانواز</p>
+        </div>
+
+    </section>
+    <section class="cooperation block">
+        <div class="cooperation_d-mod ">
+            <div class="cooperation__title">
+                <h3>رفقای بانواز!</h3>
+                <p>ما افتخار همکاری با بیش از ده ها شرکت رو در بانواز داریم.</p>
+            </div>
+        </div>
+        <img src="/assets/Logos.png" alt="">
+    </section>
+
+
 </body>
 
-<header class="main-header">
-    <div class="nav block">
-        <div class="nav__main">
-            <a class="logo" href="#">
-                <img src="/assets/logo.png" alt="image logo">
-            </a>
-
-            <ul class="nav__menu">
-                <li class="nav__item">خانه</li>
-                <li class="nav__item">فروشگاه</li>
-                <li class="nav__item">درباره ما</li>
-            </ul>
-        </div>
-        <div class="nav__btn">
-            <div class="btn btn__dark">
-                <p>ورود به داشبورد</p>
-            </div>
-            <div class="btn btn__white">
-                <p>دانلود اپلیکیشن</p>
-            </div>
-        </div>
-        <div class="nav__menu-mobile">
-            <div class="btn btn__dark-mobile">
-                <p>فروشگاه بانواز</p>
-            </div>
-            <div class="nav__toggler">
-                <div class="bar bar-one"></div>
-                <div class="bar bar-two"></div>
-                <div class="bar bar-three"></div>
-            </div>
-        </div>
-    </div>
-</header>
-<section class="home-phone container block">
-    <img src="/assets/Home.png" alt="home image">
-    <img src="/assets/Phone-img.png" class="phone-img" alt="phone image">
-    <div class="home-phone__detail">
-        <h1>خیالت از خونه راحت!</h1>
-        <p>بانواز واژه‌ای کردی به معنای باخبر ساختن با صدای بلند است. درست مثل بانواز!
-            با سنسورهای بانواز از هیچ اتفاقی بی خبر نیستی!
-            چه خونه باشی چه نه.</p>
-        <div class="btn btn__home-phone">
-            <p class="btn__name">فروشگاه بانواز</p>
-        </div>
-    </div>
-</section>
-<section class="products container block">
-    <div class="product__item"><img src="/assets/doors.png" alt="">
-        <p>درب و پنجره</p>
-    </div>
-    <div class="product__item"><img src="/assets/plants.png" alt="">
-        <p>گل و گیاه</p>
-    </div>
-    <div class="product__item"><img src="/assets/digitals.png" alt="">
-        <p>وسایل برقی</p>
-    </div>
-    <div class="product__item"><img src="/assets/lights.png" alt="">
-        <p>روشنایی</p>
-    </div>
-    <div class="product__item"><img src="/assets/worms.png" alt="">
-        <p>گرمایشی</p>
-    </div>
-    <div class="product__item"><img src="/assets/animals.png" alt="">
-        <p>حیوانات</p>
-    </div>
-</section>
-<section class="central-device container block">
-
-    <img src="/assets/device.png" alt="">
-
-    <h2>مدیریت دستگاه مرکزی</h2>
-    <p>
-        بانواز برای مدیریت و کنترل سنسورهای خودش از یک دستگاه مرکزی استفاده میکنه که همه چیز تحت کنترل همین دستگاه
-        مرکزیه. دستگاه به کمک اینترنت به گوشی شما متصل مسشه و شما میتونین همه چیز رو تحت کنترل خوتون بگیرین.
-    </p>
-</section>
-<section class="download ">
-    <div class="download__brochure">
-        <img src="/assets/dl-brochure-.png" class="dl-brochure-mobile" alt="">
-        <img src="/assets/dl-brochure-desk.png" class="dl-brochure-desk" alt="">
-        <div class="brochure__detail">
-            <h2>دارای تنظیمات مخصوص کودکان!</h2>
-            <p>نگران تغییر تنظیمات بانواز توسط فرزند عزیزت نباش!</p>
-            <div class="btn btn__light">
-                <span>فروشگاه بانواز</span>
-            </div>
-        </div>
-    </div>
-    <div class="download__app">
-        <img src="/assets/dl-app.png" alt="">
-        <div class="app__detail">
-            <h2>مدیریت خانه روی گوشی!</h2>
-            <p>با دانلود اپلیکیشن بانواز میتونی تمامی سنسورها رو روی گوشیت مشاهده و کنترل کنی.</p>
-            <div class="btn btn__primary-color">
-                <span>فروشگاه بانواز</span>
-            </div>
-        </div>
-    </div>
-</section>
 </html>
