--- a/home-phone.html
+++ b/home-phone.html
@@ -97,3 +97,31 @@
         </div>
     </div>
 </section>
+
+<section class="Capabilities container block">
+    <h2>قابلیت های ویژه بانواز</h2>
+    <div class="capability__group">
+    <div class="capability"><img src="/assets/cover-animals.png" alt="">
+        <p>سنسورهایی برای حیوان های خانگی شما نصب میشن میتونن با هوش مصنوعی گرسنه بودن اون رو تشخیص بدن!</p>
+    </div>
+    <div class="capability"><img src="/assets/cover-plants.png" alt="">
+        <p>با محاصبه حرارت اطراف خاک گیاهان میشه فهمید کی باید دوباره به گیاه ها آب بدی!</p>
+    </div>
+    <div class="capability"><img src="/assets/cover-lights.png" alt="">
+        <p>میتونی مدت زمان روشن بودن دستگاه های الکتریکی رو کنترل کنی. یا حتی برای روشن بودن اونها از بانواز کمک
+            بگیری.</p>
+    </div>
+    <div class="capability"><img src="/assets/cover-doors.png" alt="">
+        <p>باز و بسته شدن درب ها و پنجره ها، تشخیص حضور انسان و کلی قابلیت دیگه در سنسورهای بانواز</p>
+    </div>
+</div>
+</section>
+<section class="cooperation block">
+    <div class="cooperation_d-mod ">
+        <div class="cooperation__title">
+            <h3>رفقای بانواز!</h3>
+            <p>ما افتخار همکاری با بیش از ده ها شرکت رو در بانواز داریم.</p>
+        </div>
+    </div>
+    <img src="/assets/Logos.png" alt="">
+</section>
