--- a/index.html
+++ b/index.html
@@ -15,35 +15,44 @@
 
 <body>
 
+    <footer class="main-footer">
+        <div class="footer__links">
+            <div class="footer__link">
+                <p class="footer__title" href="">بانواز</p>
+                <a href="">خانه</a>
+                <a href="">فروشگاه</a>
+                <a href="">ورود به داشبورد</a>
+            </div>
+            <div class="footer__link">
+                <p class="footer__title" href="">فروشگاه</p>
+                <a href="">دستگاه مرکزی</a>
+                <a href="">سنسورهای داخلی</a>
+                <a href="">سنسورهای خارجی</a>
+            </div>
+            <div class="footer__link">
+                <p class="footer__title" href="">بانواز</p>
+                <a href="">درباره بانواز</a>
+                <a href="">وبلاگ</a>
+                <a href="">موقعیت های شغلی</a>
+                <a href="">تماس با ما</a>
 
-
-
-    <section class="Capabilities container block">
-        <div class="capability"><img src="/assets/cover-animals.png" alt="">
-            <p>سنسورهایی برای حیوان های خانگی شما نصب میشن میتونن با هوش مصنوعی گرسنه بودن اون رو تشخیص بدن!</p>
-        </div>
-        <div class="capability"><img src="/assets/cover-plants.png" alt="">
-            <p>با محاصبه حرارت اطراف خاک گیاهان میشه فهمید کی باید دوباره به گیاه ها آب بدی!</p>
-        </div>
-        <div class="capability"><img src="/assets/cover-lights.png" alt="">
-            <p>میتونی مدت زمان روشن بودن دستگاه های الکتریکی رو کنترل کنی. یا حتی برای روشن بودن اونها از بانواز کمک
-                بگیری.</p>
-        </div>
-        <div class="capability"><img src="/assets/cover-doors.png" alt="">
-            <p>باز و بسته شدن درب ها و پنجره ها، تشخیص حضور انسان و کلی قابلیت دیگه در سنسورهای بانواز</p>
-        </div>
-
-    </section>
-    <section class="cooperation block">
-        <div class="cooperation_d-mod ">
-            <div class="cooperation__title">
-                <h3>رفقای بانواز!</h3>
-                <p>ما افتخار همکاری با بیش از ده ها شرکت رو در بانواز داریم.</p>
+            </div>
+            <div class="footer__link">
+                <p class="footer__title" href="">دانلود اپلیکیشن</p>
+                <a href=""><img class="footer__badge" src="/assets/Google Play Badge.png" alt=""></a>
+                <a href=""><img class="footer__badge" src="/assets/App Store Badge.png" alt=""></a>
             </div>
         </div>
-        <img src="/assets/Logos.png" alt="">
-    </section>
-
+        <div class="footer-social block">
+            <div class="icons-covers">
+                <div class="icon-cover"> <a href=""><img src="/assets/icon-youtube.png" alt=""></a></div>
+                <div class="icon-cover"><a href=""><img src="/assets/icon-twitter.png" alt=""></a></div>
+                <div class="icon-cover"><a href=""><img src="/assets/icon-drible.png" alt=""></a></div>
+                <div class="icon-cover"><a href=""><img src="/assets/icon-instagram.png" alt=""></a></div>
+            </div>
+            <p>تمامی حقوق متعلق به بانواز میباشد.</p>
+        </div>
+    </footer>
 
 </body>
 
